# Stock-Prediction

./: .gitignore  README.md  app.py  arima.ipynb  arima.py  article_service.py  base_model.py  config.py  cron.py  daemon_helper.py  data_service.py  db_helper.py  db_init.sh  db_term.sh  entity_level_sentiment.py  env_setup.py  env_teardown.py  forecasting_metrics.py  helper.py  hmm.py  log_helper.py  lstm.ipynb  lstm.py  lstm_1.py  main.py  postproc.py  preproc.py  pyproject.toml  requirements.txt  requirements.txt.all  requirements.txt.bak  requirements.txt.old  sentiment.py  setup.py  svm.ipynb  svm.py  teardown.py  technical.py  train_models.py  ui.py  (+3 more)
data/csv/indices/: BANKNIFTY.csv
data/csv/stocks/: AXISBANK.csv  BANDHANBNK.csv  BANKBARODA.csv  FEDERALBNK.csv  HDFCBANK.csv  ICICIBANK.csv  IDFCFIRSTB.csv  INDUSINDBK.csv  KOTAKBANK.csv  PNB.csv  RBLBANK.csv  SBIN.csv
database/: NoSQLModel.py  SQLModel.py  feeds.json
templates/: home.html  prediction_form.html  predictions.html  strategy.html  strategy_form.html
