[tool.poetry]
name = "stock-prediction"
version = "0.1.0"
description = ""
authors = ["sarthak7gupta <rsarthakgupta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "^3.7.0"
PyMySQL = "^1.0.2"
PyQt5 = "^5.15.3"
SQLAlchemy = "^1.3.23"
SQLAlchemy-Utils = "^0.36.8"
beautifulsoup4 = "^4.9.3"
bson = "^0.5.10"
feedparser = "^6.0.2"
matplotlib = "^3.3.4"
mongoengine = "^0.22.1"
mplfinance = "^0.12.7-alpha.7"
newspaper3k = "^0.2.8"
nsepy = "^0.8"
numpy = "^1.20.1"
pandas = "^1.2.2"
pandas-market-calendars = "^1.6.1"
pmdarima = "^1.8.0"
psycopg2-binary = "^2.8.6"
python-dateutil = "^2.8.1"
pytz = "^2021.1"
seaborn = "^0.11.1"
sklearn = "^0.0"
tqdm = "^4.58.0"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
